add: link for hw 8 functions and filters

--- a/websites/demo/hw.html
+++ b/websites/demo/hw.html
@@ -20,6 +20,10 @@
     <a href="./homeworks/7_assArr.php">
       <li>7 - Associative Array</li>
     </a>
+
+    <a href="./homeworks/8_functions_and_filters.php">
+      <li>8 - Functions and Filters</li>
+    </a>
   </ul>
 </body>
 
