--- a/websites/demo/hw.html
+++ b/websites/demo/hw.html
@@ -24,6 +24,10 @@
     <a href="./homeworks/8_functions_and_filters.php">
       <li>8 - Functions and Filters</li>
     </a>
+
+    <a href="./homeworks/9_lamda_functions.php">
+      <li>9 - Lamda Functions</li>
+    </a>
   </ul>
 </body>
 
